--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@reduxjs/toolkit": "^2.11.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
-    "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.0",
@@ -26,8 +25,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.24",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
